# zenbook-duo-daemon

./: Cargo.toml  README.md  install.sh  zenbook-duo-daemon-post-sleep.service  zenbook-duo-daemon-pre-sleep.service  zenbook-duo-daemon.service
.cargo/: config.toml
pcap/: bt_change_backlight.pcapng  bt_micmute_led.pcapng
src/: bt_keyboard_thread.rs  config.rs  consumers.rs  deviceinfo.rs  events.rs  idle_detection.rs  keyboard_bt.rs  keyboard_usb.rs  main.rs  mute_state.rs  secondary_display.rs  state.rs  unix_pipe.rs  virtual_keyboard.rs  wired_keyboard_thread.rs
