[package]
name = "zenbook-duo-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
evdev-rs = { version = "0.6.3", features = ["serde"] }
futures-lite = "2.6.1"
inotify = "0.11.0"
log = "0.4.29"
nusb = "0.2.1"
serde = { version = "1.0.228", features = ["alloc"] }
toml = "0.9.8"
