[package]
name = "zenbook-duo-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
evdev-rs = { version = "0.6.3", features = ["serde"] }
futures-lite = "2.6.1"
inotify = "0.11.0"
log = "0.4.29"
nix = { version = "0.30.1", features = ["fs"] }
nusb = "0.2.1"
serde = { version = "1.0.228", features = ["alloc"] }
system-idle-time = "1.0.4"
toml = "0.9.8"
zbus = "5.12.0"
